Issue #81 - Add warning that HTML5 video is lower quality, right alignt back button

--- a/public/static/css/main.styl
+++ b/public/static/css/main.styl
@@ -134,7 +134,11 @@ a
   background-color #db832a
 
 #subnav
-  margin-top 30px
+  width: 900px;
+  margin-top 10px
+
+#subnav a
+  float: right;
 
 ul.videos
   margin-left 0
